--- a/src/sass/components/_product-card.scss
+++ b/src/sass/components/_product-card.scss
@@ -24,10 +24,17 @@
     }
 
     .product-card__title {
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      -webkit-line-clamp: 2;
+      min-height: 56px;
+      max-height: 56px;
       padding-left: 15px;
       margin-bottom: 10px;
       font: 500 24px/28px FuturaPT;
-      color: #30373D;
+      color: #30373D; 
     }
 
     .product-card__price {
