--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -234,6 +234,11 @@
             <span class="product-card__price-total">95&nbsp;990&nbsp;&#8381;</span>
           </div>
         </div>
+        <button class="product-card__close">
+          <svg width="16" height="16">
+            <use xlink:href="img/symbol/sprite.svg#close"></use>
+          </svg>
+        </button>
       </div>
       <div class="field field--account uk-margin-bottom">
         <label for="" class="field__title popup__subtitle">Контактный телефон</label>
