--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -421,3 +421,11 @@ select {
     visibility: visible;
   }
 }
+
+.uk-grid-small {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
